Added the stylings

--- a/index.html
+++ b/index.html
@@ -1,13 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;700;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <title>Oldagram</title>
 </head>
+
 <body>
-    
+    <div class="container">
+
+        <header>
+            <img src="images/logo.png" alt="Oldagram's logo" class="logo">
+            <img src="images/user-avatar.png" alt="per's avatar" class="user-avatar">
+        </header>
+        <hr>
+
+        <div class="user-info">
+            <img src="images/avatar-vangogh.jpg" alt="Vangogh's avatar">
+            <div class="user-info-textbox">
+                <p>Vincent van Gogh</p>
+                <p>Zundert, Netherlands</p>
+            </div>
+        </div>
+
+        <img src="images/post-vangogh.jpg" alt="Vangogh's selfie" class="vangogh-pic">
+        <div class="icon-box">
+            <img src="images/icon-heart.png" alt="heart icon" id="heart1">
+            <img src="images/icon-comment.png" alt="comment icon">
+            <img src="images/icon-dm.png" alt="DM icon">
+        </div>
+        <p class="likes" id="like-1">21 likes</p>
+        <p class="comment">vincey1853 <span>just took a few mushrooms lol</span></p>
+
+
+    </div>
+
+    <div class="container">
+
+
+
+        <div class="user-info">
+            <img src="images/avatar-courbet.jpg" alt="Vangogh's avatar">
+            <div class="user-info-textbox">
+                <p>Gustave Courbet</p>
+                <p>Ornans, France</p>
+            </div>
+        </div>
+
+        <img src="images/post-courbet.jpg" alt="Vangogh's selfie" class="vangogh-pic">
+        <div class="icon-box">
+            <img src="images/icon-heart.png" alt="heart icon" class="heart-2">
+            <img src="images/icon-comment.png" alt="comment icon">
+            <img src="images/icon-dm.png" alt="DM icon">
+        </div>
+        <p class="likes like-2">4 likes</p>
+        <p class="comment">gus1819 <span>i'm feelin a bit stressed tbh</span></p>
+
+
+    </div>
+
+    <div class="container">
+
+
+        <div class="user-info">
+            <img src="images/avatar-ducreux.jpg" alt="Vangogh's avatar">
+            <div class="user-info-textbox">
+                <p>Joseph Ducreux</p>
+                <p>Paris, France</p>
+            </div>
+        </div>
+        <img src="images/post-ducreux.jpg" alt="Vangogh's selfie" class="vangogh-pic">
+        <div class="icon-box">
+            <img src="images/icon-heart.png" alt="heart icon" class="heart-3">
+            <img src="images/icon-comment.png" alt="comment icon">
+            <img src="images/icon-dm.png" alt="DM icon">
+        </div>
+        <p class="likes like-3">152 likes</p>
+        <p class="comment">jd1735 <span>gm friends! which coin are YOU stacking up today?? post below and WAGMI!</span></p>
+
+
+    </div>
+
+    <script src="index.js"></script>
 </body>
+
 </html>
